# lua-embed-in-cpp-with-cmake

./: CMakeLists.txt  LICENSE  README.md  hello_world.lua
src/: main.cpp
